2006-04-29  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c (ilistcreate, main): instead of hard-coding
	".ilist", use ilistpath variable to specify the ilist location.

2006-03-05  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c (check_inode_and_copy): make 'canonical' be always
	defined rather than conditionally using 's'

	* tests/019_test_filename_with_space.sh: test quote character also.

	* cowdancer.c (check_inode_and_copy): rewrite with exec.

	* tests/019_test_filename_with_space.sh: add test for filename with a space.

	* cowdancer.c (check_inode_and_copy): support filename with a
	space.  Doesn't support filename with a "'" character, but that'll
	need to be handled in a completely different way.

2006-01-25  Junichi Uekawa  <dancer@debian.org>

	* NEWS: update for 0.11

	* cow-shell.1: update manual. It does cross device boundaries.
	Note that -I or -i option should be used on debuild.
	Note that hardlinks are broken all the time.

	* cowdancer.c (check_inode_and_copy): return int.
	(open): set errno=ENOMEM
	(fchmod,...): check for error condition returned from check_inode_and_copy

2006-01-14  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c (initialize_functions): use mkstemp to create a temp
	file.
	(check_inode_and_copy): thinko. fix ~~ handling.

	* tests/017_tempfilecheck.sh: fix temp file handling.

	* tests/015_test_ilistdelete.c: update to be a pthread-based test.

	* tests/018_testcxx.cc (main): test for C++ code.

	* tests/018_testcxx.sh: add test for C++ code

	* debian/changelog: 0.10 preparation.

	* NEWS: 0.10 preparation

	* tests/016_memleakcheck.sh: use mcheck to see if memory leaks
	happen.
	Why does this not fail when check is failing?

	* tests/015_test_ilistdelete.sh: disabled the check since it's
	difficult to formulate the test yet.

	* tests/002_test_open.c (main): fix thinko. It was never tested,
	really.

2006-01-13  Junichi Uekawa  <dancer@debian.org>

	* tests/015_test_ilistdelete.c (main): a preliminary