@@ -2,4 +2,5 @@
 build-stamp
 configure-stamp
 cow-shell
+cowbuilder
 cowdancer.lo
