@@ -1,8 +1,9 @@
 cowdancer (0.14) UNRELEASED; urgency=low
 
   * TODO: instead of using ./.ilist, use a temporary file in /tmp
+  * Welcome to cowbuilder
 
- -- Junichi Uekawa <dancer@debian.org>  Sat, 29 Apr 2006 00:43:00 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 21 May 2006 22:12:48 +0900
 
 cowdancer (0.13) unstable; urgency=low
 
